Version 2.0 - 2018-04-13
* BUG#8666 Fix crash during renewal on contract set with terminated contract 
* BUG#8253 Add possibility to renew only one contract of a contract set
* BUG#7542 In a contract set if a contract has already a planned termination date Coog must not prevent to renew 

Version 1.14 - 2017-11-09
* BUG#7497 Now set the right report functional date into the report context
* BUG#7473 Treat contracts in contract_set in the same renewal task in batch processing
* BUG#7412 Allow to renew contract in contract set if the other is not active

Version 1.12 - 2017-04-28

Version 1.10 - 2016-11-02

Version 1.8 - 2016-07-06

Version 1.6 - 2015-12-23

Version 1.4 - 2015-05-29
* FEA#0000 Add functions to generate schedule on contract set

Version 1.3 - 2015-01-22
* FEA#0000 Add one per set on fee
* FEA#0000 Module creation