@@ -11,6 +11,7 @@ extras_depend:
     contract_insurance_invoice_dunning
     account_party_balance
     contract_insurance_payment
+    endorsement_set
 xml:
     contract.xml
     account.xml
